--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "bedocorentin",
-  "version": "1.0.0",
-  "description": "Portfolio moderne de Corentin Bedo - Étudiant en Infrastructure & Cloud",
+  "name": "my-v0-project",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next build && next export",
-    "deploy": "npm run build"
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -40,54 +37,34 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "autoprefixer": "^10.4.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "^3.6.0",
+    "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
-    "lucide-react": "^0.400.0",
-    "next": "^15.0.0",
+    "lucide-react": "^0.454.0",
+    "next": "15.2.4",
     "next-themes": "^0.4.4",
-    "postcss": "^8.4.0",
-    "react": "^18.0.0",
+    "react": "^19",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18.0.0",
+    "react-dom": "^19",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
-    "tailwind-merge": "^2.0.0",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/node": "^20.17.50",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
-    "eslint": "^8.0.0",
-    "eslint-config-next": "^15.0.0",
-    "tailwindcss": "^3.4.0",
-    "typescript": "^5.8.3"
-  },
-  "keywords": [
-    "portfolio",
-    "nextjs",
-    "typescript",
-    "tailwindcss",
-    "infrastructure",
-    "cloud",
-    "corentin-bedo"
-  ],
-  "author": "Corentin Bedo <corentin.bedo05@gmail.com>",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://gitlab.com/Coco-Bd/bedocorentin.git"
-  },
-  "homepage": "https://coco-bd.gitlab.io/bedocorentin"
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5"
+  }
 }
